simple object and shape form but not connect

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Appy the App!</title>
+        <title>3D-Zoning</title>
         <script src="/bundle.js" defer></script>
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <body>
         <h2>Testing, testing, testing</h2>
-        <div id="main"></div>
+        
+        <div id="root"></div>
     </body>
 </html>
