--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <body>
-        <h2>Testing, testing, testing</h2>
+        <h2>3D Building Code Simulation</h2>
         
         <div id="root"></div>
     </body>
