--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,17 @@
 <html>
     <head>
         <title>3D-Zoning</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
+        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="/style.css" />
         <script src="/bundle.js" defer></script>
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <body>
-        <h2>Testing, testing, testing</h2>
+        <h2>Shape Resizer</h2>
         
         <div id="root"></div>
     </body>
