--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
     <body>
         <h2>Shape Resizer</h2>
         
-        <div id="root"></div>
+        <div id="main"></div>
     </body>
 </html>
